--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
     "console.table": "^0.10.0",
+    "dotenv": "^16.3.1",
     "inquirer": "^7.0.4",
-    "mysql": "^2.18.1"
+    "mysql2": "^3.6.1"
   },
   "scripts": {
     "start": "node server.js"
@@ -11,7 +12,6 @@
   "description": "repo for mod12 hw",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "author": "",
   "license": "ISC"
 }
